--- a/index.html
+++ b/index.html
@@ -29,6 +29,18 @@
     </div>
   </header>
 
+  <!-- Menú sticky que aparece al hacer scroll -->
+  <nav class="sticky-nav" id="sticky-nav">
+    <ul>
+      <li><a href="#inicio">Inicio</a></li>
+      <li><a href="#servicios">Servicios</a></li>
+      <li><a href="#precios">Precios</a></li>
+      <li><a href="#reservas">Reservas</a></li>
+      <li><a href="#contacto">Contacto</a></li>
+      <li><a href="#galeria">Galería</a></li>
+    </ul>
+  </nav>
+
   <main>
     <section id="inicio"><h2>Bienvenidos</h2><p>Tu estilo comienza aquí.</p></section>
     <section id="servicios"><h2>Servicios</h2><p>Cortes, afeitados y más.</p></section>
