--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
       <source src="assets/video/hero.webm" type="video/webm" />
       <!-- Si el navegador no soporta video, se mostrará el poster -->
     </video>
+    
+    <!-- Logo en esquina superior derecha -->
+    <div class="hero-logo">
+      <img src="DanielMerquiz1.png" alt="Daniel Merquiz Logo" />
+    </div>
+    
     <div class="hero-overlay">
       <h1>Estudio Daniel Merquiz</h1>
       <nav>
