--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <!-- Logo en esquina superior derecha -->
     <div class="hero-logo">
-      <img src="DanielMerquiz1.png" alt="Daniel Merquiz Logo" />
+      <img src="assets/DanielMerquiz1.png" alt="Daniel Merquiz Logo" />
     </div>
     
     <div class="hero-overlay">
