--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     
     <!-- Logo en esquina superior derecha -->
     <div class="hero-logo">
-      <img src="assets/DanielMerquiz1.png" alt="Daniel Merquiz Logo" onerror="console.log('Error loading logo'); this.style.border='3px solid red';" onload="console.log('Logo loaded successfully');" />
+      <img src="assets/DanielMerquiz1.png" alt="Daniel Merquiz Logo" />
     </div>
     
     <div class="hero-overlay">
