--- a/index.html
+++ b/index.html
@@ -61,7 +61,30 @@
       </form>
       <a class="whatsapp-button" id="wa-btn" href="https://wa.me/56912345678" target="_blank" rel="noopener">Agendar por WhatsApp</a>
     </section>
-    <section id="contacto"><h2>Contacto</h2><p>Ubícanos en redes o visítanos en el local.</p></section>
+    <section id="contacto">
+      <h2>Contacto</h2>
+      <p>Ubícanos en redes o visítanos en el local.</p>
+      
+      <div class="contact-info">
+        <div class="contact-details">
+          <h3>📍 Nuestra Ubicación</h3>
+          <p><strong>Plus Code:</strong> 4X2V+7R3 El Carmen</p>
+          <p>Te esperamos en nuestro moderno estudio para brindarte la mejor experiencia.</p>
+        </div>
+        
+        <div class="map-container">
+          <iframe 
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1000!2d0!3d0!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2s4X2V%2B7R3%20El%20Carmen!5e0!3m2!1ses!2scl!4v1640000000000!5m2!1ses!2scl&q=4X2V%2B7R3%20El%20Carmen"
+            width="100%" 
+            height="300" 
+            style="border:0;" 
+            allowfullscreen="" 
+            loading="lazy" 
+            referrerpolicy="no-referrer-when-downgrade">
+          </iframe>
+        </div>
+      </div>
+    </section>
     <section id="galeria"><h2>Galería</h2><p>Próximamente fotos de nuestros estilos.</p></section>
   </main>
 
