--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             
             <div class="map-container">
               <iframe 
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1000!2d0!3d0!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2s4X2V%2B7R3%20El%20Carmen!5e0!3m2!1ses!2scl!4v1640000000000!5m2!1ses!2scl&q=4X2V%2B7R3%20El%20Carmen"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3119.8!2d-71.6167!3d-35.4275!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzXCsDI1JzM5LjAiUyA3McKwMzcnMDAuMSJX!5e0!3m2!1ses!2scl!4v1640000000002!5m2!1ses!2scl"
                 width="100%" 
                 height="300" 
                 style="border:0;" 
