--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             
             <div class="map-container">
               <iframe 
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3119.8!2d-71.6167!3d-35.4275!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzXCsDI1JzM5LjAiUyA3McKwMzcnMDAuMSJX!5e0!3m2!1ses!2scl!4v1640000000002!5m2!1ses!2scl"
+                src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d12762.493637775427!2d-72.02388505309563!3d-36.89935641313192!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzbCsDUzJzU3LjgiUyA3MsKwMDAnMTkuNiJX!5e0!3m2!1ses-419!2scl!4v1754944779196!5m2!1ses-419!2scl"
                 width="100%" 
                 height="300" 
                 style="border:0;" 
@@ -100,7 +100,7 @@
             
             <div class="map-container">
               <iframe 
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3048.8!2d-72.1029!3d-36.6061!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzbCsDM2JzIyLjAiUyA3MsKwMDYnMTAuNCJX!5e0!3m2!1ses!2scl!4v1640000000001!5m2!1ses!2scl"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d800.5587188739297!2d-72.08288393046764!3d-36.62073262189544!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x966929c5f85ae385%3A0xc5a55d8eb678e71!2zVm9sY8OhbiBMYXNjYXIgMTI3NCwgMzgxMTQyNyBDaGlsbMOhbiwgw5F1Ymxl!5e0!3m2!1ses-419!2scl!4v1754944589868!5m2!1ses-419!2scl"
                 width="100%" 
                 height="300" 
                 style="border:0;" 
