--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
       <h2>Contacto</h2>
       <p>Ubícanos en redes o visítanos en cualquiera de nuestros locales.</p>
       
+      <!-- Redes sociales -->
+      <div class="social-media">
+        <h3>📱 Síguenos en Instagram</h3>
+        <a href="https://www.instagram.com/estudio.danielmerquiz?igsh=MWxvMWs4emtld3dpaQ==" target="_blank" rel="noopener" class="instagram-link">
+          @estudio.danielmerquiz
+        </a>
+      </div>
+      
       <div class="locations-container">
         <!-- Primera ubicación - El Carmen -->
         <div class="location-item">
