--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
     <!-- Logo en esquina superior derecha -->
     <div class="hero-logo">
-      <img src="assets/DanielMerquiz1.png" alt="Daniel Merquiz Logo" />
+      <img id="login-logo" src="assets/DanielMerquiz1.png" alt="Daniel Merquiz Logo" style="cursor:pointer;" />
     </div>
     
     <div class="hero-overlay">
@@ -124,11 +124,6 @@
     </section>
     <section id="galeria"><h2>Galería</h2><p>Próximamente fotos de nuestros estilos.</p></section>
   </main>
-
-  <!-- Logo a la derecha del video -->
-  <div style="position: absolute; top: 20px; right: 40px; z-index: 10;">
-    <img id="login-logo" src="assets/DanielMerquiz1.png" alt="Logo" style="cursor:pointer; width:60px;">
-  </div>
 
   <!-- Modal de inicio de sesión -->
   <div id="login-modal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.5); z-index:1000; justify-content:center; align-items:center;">
