--- a/index.html
+++ b/index.html
@@ -126,10 +126,10 @@
   </main>
 
   <!-- Modal de inicio de sesión -->
-  <div id="login-modal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.5); z-index:1000; justify-content:center; align-items:center;">
+  <div id="login-modal" style="display:none; position:fixed; top:0; left:0; width:100vw; height:100vh; background:rgba(0,0,0,0.2); z-index:1000; justify-content:center; align-items:center;">
     <div style="background:#fff; padding:30px; border-radius:8px; min-width:300px; position:relative;">
       <span id="close-login" style="position:absolute; top:10px; right:15px; cursor:pointer; font-size:20px;">&times;</span>
-      <h2>Iniciar sesión</h2>
+      <h2 style="color:#000;">Iniciar sesión</h2>
       <form id="admin-login-form">
         <input type="text" id="admin-user" placeholder="Usuario" required style="width:100%; margin-bottom:10px;">
         <input type="password" id="admin-pass" placeholder="Contraseña" required style="width:100%; margin-bottom:10px;">
