--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
   <title>Estudio Daniel Merquiz</title>
   <link rel="icon" type="image/png" href="assets/Barber-shop-logo.png" />
   <link rel="stylesheet" href="style.css" />
+
+ <!-- Firebase SDK -->
+  <script src="https://www.gstatic.com/firebasejs/10.12.5/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.12.5/firebase-database-compat.js"></script>
+
   <script src="script.js" defer></script>
 </head>
 <body>
