--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <header class="hero">
-    <video class="hero-video" autoplay muted loop playsinline poster="assets/hero-poster.jpg">
+    <video class="hero-video" autoplay muted loop playsinline>
       <source src="assets/video/hero.mp4" type="video/mp4" />
       <source src="assets/video/hero.webm" type="video/webm" />
       <!-- Si el navegador no soporta video, se mostrará el poster -->
