--- a/index.html
+++ b/index.html
@@ -290,6 +290,17 @@
               </div>
             </div>
             
+            <!-- Mensaje informativo para desarrollo -->
+            <div class="dev-info" id="dev-info" style="display:none;">
+              <div class="info-message">
+                <span class="info-icon">ℹ️</span>
+                <div class="info-content">
+                  <strong>Modo Desarrollo:</strong> Las imágenes se almacenan localmente en tu navegador. 
+                  Para uso en producción, despliega la aplicación en un servidor web.
+                </div>
+              </div>
+            </div>
+            
             <div class="images-grid" id="admin-images-grid">
               <div class="no-images">
                 <p>📷 No hay imágenes en la galería aún</p>
