--- a/index.html
+++ b/index.html
@@ -295,8 +295,9 @@
               <div class="info-message">
                 <span class="info-icon">ℹ️</span>
                 <div class="info-content">
-                  <strong>Modo Desarrollo:</strong> Las imágenes se almacenan localmente en tu navegador. 
-                  Para uso en producción, despliega la aplicación en un servidor web.
+                  <strong>Modo Local:</strong> Las imágenes se almacenan localmente en tu navegador. 
+                  Para almacenamiento permanente en la nube, configura Firebase Storage en tu servidor.
+                  <br><small>Las imágenes persisten mientras no limpies el caché del navegador.</small>
                 </div>
               </div>
             </div>
