--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <script src="https://www.gstatic.com/firebasejs/10.12.5/firebase-database-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.5/firebase-storage-compat.js"></script>
 
+  <script src="config.js"></script>
   <script src="script.js" defer></script>
 </head>
 <body>
