--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             
             <div class="map-container">
               <iframe 
-                src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d12762.493637775427!2d-72.02388505309563!3d-36.89935641313192!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zMzbCsDUzJzU3LjgiUyA3MsKwMDAnMTkuNiJX!5e0!3m2!1ses-419!2scl!4v1754944779196!5m2!1ses-419!2scl"
+                src="https://www.google.com/maps/embed?pb=!4v1755521355102!6m8!1m7!1soDmV8t-2M72Xu6LA5mXOIA!2m2!1d-36.89990786801867!2d-72.00504877342019!3f268.65512!4f1.1345254984292978!5f0.7820865974627469"
                 width="100%" 
                 height="300" 
                 style="border:0;" 
