--- a/index.html
+++ b/index.html
@@ -7,10 +7,13 @@
   <link rel="icon" type="image/png" href="assets/Barber-shop-logo.png" />
   <link rel="stylesheet" href="style.css" />
 
- <!-- Firebase SDK -->
+  <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/10.12.5/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.5/firebase-database-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/10.12.5/firebase-storage-compat.js"></script>
+
+  <!-- Cloudinary SDK -->
+  <script src="cloudinary-config.js"></script>
 
   <script src="config.js"></script>
   <script src="script.js" defer></script>
