--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
   <!-- Cloudinary SDK -->
   <script src="cloudinary-config.js"></script>
+  <script src="sync-helper.js"></script>
 
   <script src="config.js"></script>
   <script src="script.js" defer></script>
