--- a/index.html
+++ b/index.html
@@ -346,8 +346,8 @@
                 <input type="text" id="producto-nombre" required placeholder="Ej: Pomada para cabello">
               </div>
               <div class="form-group">
-                <label for="producto-precio">Precio ($)</label>
-                <input type="number" id="producto-precio" step="0.01" min="0" required placeholder="15.99">
+                <label for="producto-precio">Precio (CLP)</label>
+                <input type="number" id="producto-precio" step="1" min="0" required placeholder="3990">
               </div>
             </div>
             
