--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Estudio Daniel Merquiz</title>
   <link rel="icon" type="image/png" href="assets/Barber-shop-logo.png" />
+  
+  <!-- Adobe Fonts - Reemplaza YOUR_KIT_ID con tu ID de kit real -->
+  <link rel="stylesheet" href="https://use.typekit.net/mbt5esf.css">
+  <!-- Ejemplo: <link rel="stylesheet" href="https://use.typekit.net/abc1def.css"> -->
+  
   <link rel="stylesheet" href="style.css" />
 
   <!-- Firebase SDK -->
