--- a/index.html
+++ b/index.html
@@ -10,6 +10,26 @@
   <link rel="stylesheet" href="https://use.typekit.net/mbt5esf.css">
   <!-- Ejemplo: <link rel="stylesheet" href="https://use.typekit.net/abc1def.css"> -->
   
+  <!-- Script para diagnosticar fuentes cargadas -->
+  <script>
+    document.fonts.ready.then(function() {
+      console.log('Fuentes disponibles:');
+      document.fonts.forEach(function(font) {
+        if (font.family.toLowerCase().includes('barber')) {
+          console.log('Fuente Barber encontrada:', font.family);
+        }
+      });
+      
+      // Probar si la fuente está disponible
+      const testElement = document.createElement('div');
+      testElement.style.fontFamily = 'barber, serif';
+      document.body.appendChild(testElement);
+      const computedStyle = window.getComputedStyle(testElement);
+      console.log('Fuente calculada:', computedStyle.fontFamily);
+      document.body.removeChild(testElement);
+    });
+  </script>
+  
   <link rel="stylesheet" href="style.css" />
 
   <!-- Firebase SDK -->
