--- a/index.html
+++ b/index.html
@@ -99,7 +99,10 @@
     </div>
     
     <div class="hero-overlay">
-      <h1>Estudio Daniel Merquiz</h1>
+      <h1>
+        <span class="titulo-linea-1">ESTUDIO</span>
+        <span class="titulo-linea-2">DANIEL MERQUIZ</span>
+      </h1>
       <nav>
         <ul>
           <li><a href="#inicio">Inicio</a></li>
